Implementando cadastrar e entrar

--- a/BlogAngular/blogPessoal/src/app/menu/menu.component.html
+++ b/BlogAngular/blogPessoal/src/app/menu/menu.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
         <ul class="navbar-nav mr-auto d-flex align-items-center">
             <li class="nav-item active">
-                <img src="http://imagens.ndig.com.br/internet/perfil_sem_foto_facebook.jpg" alt="Imagem do User"
+                <img src="../../assets/a8df7ab1-6758-4f29-98f6-d1d338ab076b.jpg" alt="Imagem do User"
                     width="50px" height="50px" class="img-fluid rounded-circle">
             </li>
             <li class="nav-item pl-3">
