--- a/BlogAngular/blogPessoal/src/app/cadastrar/cadastrar.component.html
+++ b/BlogAngular/blogPessoal/src/app/cadastrar/cadastrar.component.html
@@ -12,33 +12,33 @@
 
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
+                        <input [(ngModel)]='use' class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome" >
                     </div>
 
                     <div class="form-group">
-                        <label for="usuario">Usúrio</label>
-                        <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usúario">
+                        <label for="usuario">Usuário</label>
+                        <input [(ngModel)]='user.usuário' class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usúario">
                     </div>
 
                     <div class="form-group">
                         <label for="foto">Link da Foto</label>
-                        <input class="form-control" type="text" name="foto" id="foto" placeholder="linda da sua foto">
+                        <input [(ngModel)]='user.foto' class="form-control" type="text" name="foto" id="foto" placeholder="linda da sua foto">
                     </div>
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
+                        <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
                     </div>
 
                     <div class="form-group">
                         <label for="confirmSenha">Confirmar Senha</label>
-                        <input class="form-control" type="password" name="confirmSenha" id="confirmSenha"
+                        <input [(ngModel)]='user.senha' class="form-control" type="password" name="confirmSenha" id="confirmSenha"
                             placeholder="Confirme sua senha">
                     </div>
 
                     <div class="form-group">
                         <label for="tipo">Tipo de Usuário </label>
-                        <select class="form-control" name="tipo" id="tipo">
+                        <select class="form-control" name="tipo" id="tipo" (change)='tipoUser($event)'>
                             <option>Selecione um tipo de usuário</option>
                             <option value="normal">Normal</option>
                             <option value="adm">Administrador</option>
@@ -48,7 +48,7 @@
                         <div class="d-flex justify-content-center">
 
                             <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
-                            <button type="submit" class="btn btn-success">Cadastrar</button>
+                            <button type="submit" class="btn btn-success" (click)='cadastrar()'>Cadastrar</button>
 
                         </div>
 
