--- a/BlogAngular/blogPessoal/src/app/inicio/inicio.component.html
+++ b/BlogAngular/blogPessoal/src/app/inicio/inicio.component.html
@@ -34,8 +34,9 @@
     <nav>
         <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
 
-            <a class="nav-item nav-link active text-secondary font-weight-bold" id="todasPostagens" data-toggle="tab"
-                href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as
+            <a class="nav-item nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab"
+                data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens"
+                aria-selected="true">Todas as
                 Postagens</a>
 
             <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab"
@@ -49,7 +50,8 @@
 
     </nav>
     <div class="tab-content" id="nav-tabContent">
-        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens">
+        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel"
+            aria-labelledby="nav-todasPostagens-tab">
             Todas as Postagens</div>
 
         <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">Minhas
@@ -59,11 +61,6 @@
             por tema</div>
     </div>
 </div>
-
-
-
-
-
 
 <!-- Modal -->
 <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
@@ -88,7 +85,8 @@
                     </div>
 
                     <div class="form-grup">
-                        <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink='/tema'>cadastre um novo</a></label>
+                        <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink='/tema'>cadastre um
+                                novo</a></label>
                         <select name="tema" id="tema" class="form-control">
                             <option value="">Temas</option>
                         </select>
@@ -102,3 +100,4 @@
             </div>
         </div>
     </div>
+    <!--/Modal-->
