--- a/BlogAngular/blogPessoal/src/app/menu/menu.component.html
+++ b/BlogAngular/blogPessoal/src/app/menu/menu.component.html
@@ -16,8 +16,8 @@
 
             <li class="nav-item pl-3">
                 <a href="">
-                    <p class="text-white fs-16 m=0"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                    </p>
+                    <i class="fa fa-pencil-square-o text-white fs-16 m=0" aria-hidden="true"></i>
+                  
                 </a>
 
             </li>
