--- a/BlogAngular/blogPessoal/src/app/menu/menu.component.html
+++ b/BlogAngular/blogPessoal/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-light cor">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
         aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
         <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
             </li>
 
             <li class="nav-item pl-3">
-                <a href="">
+                <a [routerLink]="['/user-edit', id]">
                     <i class="fa fa-pencil-square-o text-white fs-16 m=0" aria-hidden="true"></i>
                   
                 </a>
